<resources>
    <string name="app_name">cloo</string>
    <string name="string_app_version">cloo\nver 0.80</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps__directions">Toilet Details</string>
    <string name="title_activity_my_profile">My Profile</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="string_your_current_location">Your current location</string>
    <string name="string_location_address_coordinates">Location address and coordinates</string>
    <string name="string_location">Location</string>
    <string name="strings_latitude">Latitude:</string>
    <string name="strings_longitude">Longitude:</string>
    <string name="strings_latitude_default">latitude not known</string>
    <string name="strings_longitude_default">longitude not known</string>
    <string name="strings_address_default">Location address</string>
    <string name="strings_comments">Comments (optional)</string>
    <string name="strings_GetLocationButton">Refresh</string>
    <string name="strings_SubmitButtonLabel">Submit</string>
    <string name="no_location_detected">No location detected. Make sure location is enabled on the device.</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="button_go">Directions</string>
    <string name="title_activity_janitor">Edit Toilet Features</string>
    <string name="title_activity_rating">Your Toilet Rating</string>
    <string name="title_activity_clean">Maintenance Form</string>

    <string-array name="Gender"/>
    <string name="hint_cleaned_by">Cleaned by</string>
    <string name="default_timestamp">1/11/11 1:11:11</string>
    <string name="button_label_cleaned">Cleaned</string>
    <string name="hint_remarks">Remarks</string>
    <string name="default_toilet_name">Default Toilet Name</string>
    <string name="string_basics">Basic working requirement</string>
    <string name="check_item_water_available">Water</string>
    <string name="check_item_lights_available">Lights Working</string>
    <string name="check_item_fresh_aroma">Fresh Air</string>
    <string name="check_item_plumbing">Working Plumbing</string>
    <string name="check_item_clean_sink">Sink, Washbasin</string>
    <string name="check_item_clean_mirror">Mirror</string>
    <string name="check_item_clean_toilets">Toilets, Commode, Seats</string>
    <string name="check_item_clean_floor">Floor</string>
    <string name="check_item_clean_wall">Wall Tiles</string>
    <string name="check_item_stock_handwash">Handwash</string>
    <string name="check_item_stock_tissue">Hand tissue</string>
    <string name="string_wash_clean_wipe">Wash, Clean and Wipe</string>
    <string name="string_check_stock">Check Stock</string>
    <string name="hint_toilet_name">Toilet Name</string>
    <string name="button_label_save">Save</string>
    <string name="spinner_label_toilet_access">Toilet Access</string>
    <string name="spinner_label_gender">Gender</string>
    <string name="string_toilet_types">Types</string>
    <string name="check_label_western">Western Style</string>
    <string name="check_types_indian">Indian Style</string>
    <string name="check_types_urinal">Urinal</string>
    <string name="string_features">Features</string>
    <string name="check_label_water">Water</string>
    <string name="check_label_handwash">Handwash, soap</string>
    <string name="check_label_electricity">Electricity</string>
    <string name="check_label_door">Door with Latches</string>
    <string name="check_label_hand_dryer">Hand Dryer</string>
    <string name="check_label_bucket">Bucket and Mug</string>
    <string name="check_label_tissue">Tissue</string>
    <string name="check_label_bidet">Bidet, Fosset</string>
    <string name="check_label_face_tissue">Face Tissue</string>
    <string name="check_label_freshair_fan">Fresh Air Fan</string>
    <string name="check_label_air_freshner">Air Freshner</string>
    <string name="check_label_maintained_by">Maintained by:</string>
    <string name="hint_maintained_by">Maintained by</string>
    <string name="hint_contact_number">Contact Number</string>
    <string name="string_please_rate">Please rate</string>
    <string name="button_label_submit_close">Submit</string>
    <string name="button_label_submit_show_next">Submit, Show Next</string>
    <string name="string_feature_date">Feature Data</string>
    <string name="default_maintained_by">Default Maintained By</string>
    <string name="button_label_update_record">Update Record</string>
    <string name="button_label_clean">Clean</string>
    <string name="string_sponsor">Default Sponsor</string>
    <string name="string_timestamp_not_available">Not Available</string>
    <string name="intent_toilet_id">TOILET_ID</string>
    <string name="intent_toilet_name">TOILET_NAME</string>
    <string name="intent_janitor">TOILET_JANITOR</string>
    <string name="error_msg_clean_record_id_null">Clean Report cannot be captured as push key returned null.</string>
    <string name="error_msg_toilet_record_id_null">Toilet cannot be captured as push key returned null.</string>
    <string name="error_msg_toilet_rating_id_null">Toilet rating cannot be captured as push key returned null.</string>
    <string name="status_clean_report_captured">Thank you! Clean report captured.</string>
    <string name="intent_latitude">LAT</string>
    <string name="intent_longitude">LNG</string>
    <string name="intent_altitude">ALT</string>
    <string name="intent_toilet_address">TOILET_ADDRESS</string>
    <string name="intent_toilet_access">TOILET_ACCESS</string>
    <string name="intent_toilet_gender">TOILET_GENDER</string>
    <string name="intent_toilet_type">TOILET_TYPE</string>
    <string name="intent_contact_number">TOILET_CONTACT</string>
    <string name="intent_toilet_maintained_by">TOILET_MAINTAINED_BY</string>
    <string name="intent_toilet_owner">TOILET_OWNER</string>
    <string name="intent_sponsor">TOILET_SPONSOR</string>
    <string name="intent_rating">RATING</string>
    <string name="intent_last_cleaned">LAST_CLEANED</string>
    <string name="intent_last_cleaned_presentable_timestamp">LAST_CLEANED_PRESENTABLE</string>
    <string name="intent_rating_sum">RATING_SUM</string>
    <string name="intent_number_of_ratings">NUMBER_OF_RATINGS</string>
    <string name="intent_rating_sum_lifetime">RATING_SUM_LIFETIME</string>
    <string name="intent_number_of_ratings_lifetime">NUMBER_OF_RATINGS_LIFETIME</string>
    <string name="intent_sponsor_image_path">SPONSOR_IMAGE_PATH</string>
    <string name="intent_user_name">USER_NAME</string>
    <string name="intent_user_id">USER_ID</string>
    <string name="strings_toilet_location">Toilet Location</string>
    <string name="status_toilet_master_created">New toilet is recorded</string>
    <string name="status_toilet_rating_saved">Appreciate your rating. Thank you!</string>
    <string name="status_toilet_master_updated">Thank you! Toilet record updated</string>
    <string name="intent_toilet_features">TOILET_FEATURES</string>
    <string name="strings_km_away">km(s) away</string>
    <string name="strings_mtrs_away">mtr(s) away</string>
    <string name="strings_na_spaces">N A</string>
    <string name="strings_rating">Rating</string>
    <string name="strings_cleaned_on">Cleaned on:</string>
    <string name="strings_toilet_for">Toilet for:</string>
    <string name="array_toilet_gender_gents_only">Gents only</string>
    <string name="array_toilet_gender_ladies_only">Ladies only</string>
    <string name="array_toilet_gender_ladies_and_gents">Ladies and Gents (separate)</string>
    <string name="array_toilet_gender_unisex">Unisex</string>
    <string name="array_toilet_access_free_toilet">Free Public Toilet</string>
    <string name="array_toilet_access_pay_and_use">Pay and Use Toilet</string>
    <string name="array_toilet_access_for_customers_only">For Customers Only</string>
    <string name="array_toilet_access_restricted_entry">Restricted Entry</string>
    <string name="array_toilet_access_private_toilet">Private</string>
    <string name="error_toilet_access_unknown">Toilet access unknown</string>
    <string name="error_toilet_gender_unknown">Ladies and Gents category not known</string>
    <string name="error_toilet_style_unknown">Toilet style unknown</string>
    <string name="strings_toilet_style">Toilet Style:</string>
    <string name="error_no_location">Current location not detected, using default. Refresh</string>
    <string name="title_activity_landing">Toilets near me</string>
    <string name="url_server">http://clooserverr1.pythonanywhere.com/</string>
    <string name="url_landing_page_api">resultsub</string>
    <string name="error_location_not_found">Unable to determine current location, using defaults! Please turn on
        location and retry
    </string>
    <string name="string_location_found">In a radius of</string>

    <string name="title_activity_start_up_screen">cloo</string>
    <string name="dummy_button">Proceed</string>
    <string name="dummy_content">cloo</string>
    <string name="dummy_slogan">Join the community to help get cleaner accessible toilets\n\n</string>

    <string name="title_activity_startup">cloo</string>

    <string name="title_activity_fullscreen">cloo</string>
    <string name="string_location_accuracy">Accuracy:</string>
    <string name="string_location_provider">Provider:</string>
    <string name="title_activity_login">LoginActivity</string>
</resources>
