<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_janitor"
        tools:context=".JanitorActivity">

    <EditText
            android:layout_width="282dp"
            android:layout_height="37dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_ToiletName"
            android:hint="@string/hint_toilet_name"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:textSize="14sp"/>
    <Button
            android:text="@string/button_label_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSave"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/editText_ToiletName" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText_ToiletName"
            app:layout_constraintHorizontal_bias="0.854"/>
    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_ToiletName">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <fragment
                    android:layout_width="360dp"
                    android:layout_height="211dp"
                    android:id="@+id/map"
                    tools:context=".MapsActivity_Directions"
                    android:name="com.google.android.gms.maps.SupportMapFragment"/>
            <TextView
                    android:text="@string/string_location"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:id="@+id/textView_Latlng"
            />
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    android:inputType="none|textCapWords|textMultiLine"
                    android:ems="10"
                    tools:layout_editor_absoluteX="8dp"
                    android:id="@+id/editText_Loo_Address" android:hint="@string/strings_address_default"
                    tools:layout_editor_absoluteY="244dp"/>
            <TextView
                    android:text="@string/spinner_label_toilet_access"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView_ToiletAccess"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/spinner_toiletAccess"/>
            <TextView
                    android:text="@string/spinner_label_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView_Gender"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/spinner_Gender"
            />
            <TextView
                    android:text="@string/string_toilet_types"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewType"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <CheckBox
                        android:text="@string/check_label_western"
                        android:layout_height="wrap_content" android:id="@+id/checkBoxCommode"
                        android:layout_width="wrap_content"/>
                <CheckBox
                        android:text="@string/check_types_indian"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/checkBoxIndianPan"/>
                <CheckBox
                        android:text="@string/check_types_urinal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/checkBoxUrinal"/>
            </LinearLayout>
            <TextView
                    android:text="@string/string_features"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="8dp" android:id="@+id/textView_Features"
                    tools:layout_editor_absoluteY="391dp"/>
            <CheckBox
                    android:text="@string/check_label_water"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBox_Water"/>
            <CheckBox
                    android:text="@string/check_label_handwash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBox_Soap"/>
            <CheckBox
                    android:text="@string/check_label_electricity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxElectricity"/>
            <CheckBox
                    android:text="@string/check_label_door"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxDoor"/>
            <CheckBox
                    android:text="@string/check_label_hand_dryer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxDryer"/>
            <CheckBox
                    android:text="@string/check_label_bucket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxBucketMug"/>
            <CheckBox
                    android:text="@string/check_label_tissue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBox_Tissue"/>
            <CheckBox
                    android:text="@string/check_label_bidet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxBidet"/>
            <CheckBox
                    android:text="@string/check_label_face_tissue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxFaceTissue"/>
            <CheckBox
                    android:text="@string/check_label_freshair_fan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxFreshAirFan"/>
            <CheckBox
                    android:text="@string/check_label_air_freshner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxFreshner"/>
            <TextView
                    android:text="@string/check_label_maintained_by"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewJanitorLabel"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editTextMaintainedBy" android:hint="@string/hint_maintained_by"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/editTextContact" android:inputType="phone"
                    android:hint="@string/hint_contact_number"/>
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>