<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CleanActivity">

    <TextView
            android:text="@string/default_toilet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView_toiletName"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/default_timestamp"
            android:layout_width="196dp"
            android:layout_height="22dp" android:id="@+id/textViewCleanTimeStamp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editText_JanitorName"
            android:layout_marginTop="16dp"/>
    <Button
            android:text="@string/button_label_cleaned"
            android:layout_width="107dp"
            android:layout_height="39dp" android:id="@+id/button_Cleaned"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewCleanTimeStamp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toEndOf="@+id/textViewCleanTimeStamp"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:id="@+id/scrollView2"
            app:layout_constraintTop_toBottomOf="@+id/button_Cleaned" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.521"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="84dp"
                    android:inputType="none|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine"
                    android:ems="10"
                    tools:layout_editor_absoluteY="439dp" tools:layout_editor_absoluteX="30dp"
                    android:id="@+id/editTextOthers" android:hint="@string/hint_remarks" android:singleLine="false"
                    android:importantForAutofill="no"
            />
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="34dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp" android:id="@+id/textView_checksLabel"
                    android:text="@string/string_basics"/>
            <CheckBox
                    android:text="@string/check_item_water_available"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxWater"/>
            <CheckBox
                    android:text="@string/check_item_lights_available"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxElectricity"/>
            <CheckBox
                    android:text="@string/check_item_fresh_aroma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxStinks"/>
            <CheckBox
                    android:text="@string/check_item_plumbing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxPlumbing"/>
            <TextView
                    android:text="@string/string_wash_clean_wipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewCleanAndTidy"/>
            <CheckBox
                    android:text="@string/check_item_clean_sink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxSink"/>
            <CheckBox
                    android:text="@string/check_item_clean_mirror"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxMirror"/>
            <CheckBox
                    android:text="@string/check_item_clean_toilets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxToilets"/>
            <CheckBox
                    android:text="@string/check_item_clean_floor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxFloor"/>
            <CheckBox
                    android:text="@string/check_item_clean_wall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="333dp"
                    tools:layout_editor_absoluteX="80dp" android:id="@+id/checkBoxWall"/>
            <TextView
                    android:text="@string/string_check_stock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textViewStock"/>
            <CheckBox
                    android:text="@string/check_item_stock_handwash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="374dp"
                    tools:layout_editor_absoluteX="8dp" android:id="@+id/checkBoxSoap"/>
            <CheckBox
                    android:text="@string/check_item_stock_tissue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/checkBoxTissue"/>
        </LinearLayout>
    </ScrollView>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText_JanitorName"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_toiletName" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:hint="@string/hint_cleaned_by"
            android:textSize="12sp"
            android:importantForAutofill="no"/>
</android.support.constraint.ConstraintLayout>