<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivityAddNewLoo">

    <TextView
            android:text="@string/string_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:id="@+id/textView_AddNewLoo"/>
    <TextView
            android:text="@string/strings_address_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_Address"
            tools:layout_editor_absoluteY="16dp" app:layout_constraintStart_toEndOf="@+id/textView_AddNewLoo"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>
    <Button
            android:text="@string/strings_GetLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:id="@+id/button_GetLocation"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/divider" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    <Button
            android:text="@string/strings_SubmitButtonLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_Submit"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:id="@+id/ratingBar_addlocation"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            tools:layout_editor_absoluteY="209dp" app:layout_constraintHorizontal_bias="0.366"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="105dp"
            android:inputType="textMultiLine|textCapSentences|textAutoComplete"
            android:ems="10"
            android:id="@+id/editText_LooRatingComments" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/strings_comments"
            app:layout_constraintHorizontal_bias="0.642" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/button_Submit"/>
    <TextView
            android:text="@string/string_location_accuracy"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:id="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/mapView"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_Address"/>
    <TextView
            android:text="@string/string_location_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintTop_toBottomOf="@+id/mapView"
            android:layout_marginTop="8dp"/>
    <com.google.android.gms.maps.MapView
            android:layout_width="0dp"
            android:layout_height="129dp"
            android:id="@+id/mapView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_AddNewLoo" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/button_GetLocation" android:layout_marginRight="16dp"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"/>
</android.support.constraint.ConstraintLayout>