<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main__locate_loo"
        tools:context=".MainActivity_LocateLoo">

    <TextView
            android:text="@string/string_your_current_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp" android:layout_marginStart="24dp"
            android:id="@+id/textView_current_location_label"/>
    <TextView
            android:text="@string/string_location_address_coordinates"
            android:layout_width="352dp"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:id="@+id/textView_current_location"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_current_location_label"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    <ListView
            android:layout_width="346dp"
            android:layout_height="385dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:id="@+id/listview_loo_locations" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_current_location"/>
    <Button
            android:text="@string/strings_GetLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/button_RefreshLocation"
            app:layout_constraintStart_toEndOf="@+id/textView_current_location_label"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.952"/>
</android.support.constraint.ConstraintLayout>